--- a/.gitignore
+++ b/.gitignore
@@ -54,5 +54,6 @@
 !.vscode/launch.json
 !.vscode/extensions.json
 *.code-workspace
+.vscode/
 
 # End of https://www.toptal.com/developers/gitignore/api/vscode
